# students-performance

./: .gitignore  README.md  app.json  package-lock.json  package.json
app/(auth)/: auth.tsx
app/(protected)/: _layout.tsx
app/(protected)/(tabs)/: _layout.tsx  index.tsx
backend/: .env.example  .gitignore  Makefile  README.md  go.mod  go.sum  main.go  package-lock.json  package.json  pyproject.toml
backend/cmd/api/: api.go  main.go
backend/pkg/config/: config.go
backend/pkg/db/: db.go
backend/pkg/handlers/: handlers.go  user_handler.go
backend/pkg/repo/: repo.go  user_repo.go
backend/pkg/routes/: routes.go
backend/pkg/services/: services.go  user_services.go
backend/src/: app.module.ts
backend/src/backend/: main.py
backend/src/backend/api/: config.py
backend/src/backend/api/models/: models.py
backend/src/backend/api/routes/: user_routes.py
backend/src/users/: users.controller.ts  users.module.ts  users.service.ts
backend/src/users/dto/: create-user.dto.ts
backend/src/users/entities/: user.entity.ts
frontend/: .gitignore  README.md  app.json  index.js  metro.config.cjs  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: _layout.tsx
frontend/app/(auth)/: _layout.tsx  auth.tsx
frontend/app/(protected)/: _layout.tsx
frontend/app/(protected)/(tabs)/: _layout.tsx  details.tsx  index.tsx  profile.tsx  studyPlan.tsx
frontend/lib/: MockDB.ts  store.ts
lib/: appwrite.ts  auth-context.tsx  store.ts
